# Books-Multiagent

./: README.md  pyproject.toml
src/: main.py
src/api/: app.py  routes.py
src/database/: book_service.py  models.py
src/llm/: client.py  ia_service.py
src/tools/: book_tools.py
